Slowing renaming to meme.

--- a/scripts/repo-add.sh.in
+++ b/scripts/repo-add.sh.in
@@ -4,7 +4,7 @@
 #   repo-remove - remove a package entry from a given repo database file
 #   @configure_input@
 #
-#   Copyright (c) 2006-2018 Pacman Development Team <pacman-dev@archlinux.org>
+#   Copyright (c) 2006-2018 meme Development Team <meme-dev@archlinux.org>
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@
 shopt -s extglob
 
 # gettext initialization
-export TEXTDOMAIN='pacman-scripts'
+export TEXTDOMAIN='meme-scripts'
 export TEXTDOMAINDIR='@localedir@'
 
 declare -r myver='@PACKAGE_VERSION@'
@@ -50,7 +50,7 @@ m4_include(library/output_format.sh)
 # print usage instructions
 usage() {
 	cmd=${0##*/}
-	printf -- "%s (pacman) %s\n\n" "$cmd" "$myver"
+	printf -- "%s (meme) %s\n\n" "$cmd" "$myver"
 	if [[ $cmd == "repo-add" ]] ; then
 		printf -- "$(gettext "Usage: repo-add [options] <path-to-db> <package|delta> ...\n")"
 		printf -- "\n"
@@ -84,7 +84,7 @@ packages to remove can be specified on the command line.\n")"
 See %s(8) for more details and descriptions of the available options.\n")" $cmd
 	printf "\n"
 	if [[ $cmd == "repo-add" ]] ; then
-		printf -- "$(gettext "Example:  repo-add /path/to/repo.db.tar.gz pacman-3.0.0-1-i686.pkg.tar.gz\n")"
+		printf -- "$(gettext "Example:  repo-add /path/to/repo.db.tar.gz meme-3.0.0-1-i686.pkg.tar.gz\n")"
 	elif [[ $cmd == "repo-remove" ]] ; then
 		printf -- "$(gettext "Example:  repo-remove /path/to/repo.db.tar.gz kernel26\n")"
 	fi
@@ -92,9 +92,9 @@ See %s(8) for more details and descriptions of the available options.\n")" $cmd
 
 version() {
 	cmd=${0##*/}
-	printf "%s (pacman) %s\n\n" "$cmd" "$myver"
+	printf "%s (meme) %s\n\n" "$cmd" "$myver"
 	printf -- "$(gettext "\
-Copyright (c) 2006-2018 Pacman Development Team <pacman-dev@archlinux.org>\n\n\
+Copyright (c) 2006-2018 meme Development Team <meme-dev@archlinux.org>\n\n\
 This is free software; see the source for copying conditions.\n\
 There is NO WARRANTY, to the extent permitted by law.\n")"
 }
@@ -310,7 +310,7 @@ verify_repo_extension() {
 	printf '%s' "$TAR_OPT"
 }
 
-# write an entry to the pacman database
+# write an entry to the meme database
 #   arg1 - path to package
 db_write_entry() {
 	# blank out all variables
@@ -533,7 +533,7 @@ prepare_repo_db() {
 			if ! bsdtar -tqf "$dbfile" '*/desc' >/dev/null 2>&1; then
 				# check empty case
 				if [[ -n $(bsdtar -tqf "$dbfile" '*' 2>/dev/null) ]]; then
-					error "$(gettext "Repository file '%s' is not a proper pacman database.")" "$dbfile"
+					error "$(gettext "Repository file '%s' is not a proper meme database.")" "$dbfile"
 					exit 1
 				fi
 			fi
