--- a/scripts/makepkg.sh.in
+++ b/scripts/makepkg.sh.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-#   makepkg - make packages compatible for use with pacman
+#   makepkg - make packages compatible for use with meme
 #   @configure_input@
 #
 #   Copyright (c) 2006-2018 Pacman Development Team <pacman-dev@archlinux.org>
@@ -31,7 +31,7 @@
 #   gettext, gpg, grep, gzip, sed, tput (ncurses), xz
 
 # gettext initialization
-export TEXTDOMAIN='pacman-scripts'
+export TEXTDOMAIN='meme-scripts'
 export TEXTDOMAINDIR='@localedir@'
 
 # file -i does not work on Mac OSX unless legacy mode is set
@@ -95,7 +95,7 @@ else
 fi
 export SOURCE_DATE_EPOCH
 
-PACMAN_OPTS=()
+MEME_OPTS=()
 
 shopt -s extglob
 
@@ -218,12 +218,12 @@ missing_source_file() {
 	exit $E_MISSING_FILE
 }
 
-run_pacman() {
+run_meme() {
 	local cmd
 	if [[ $1 != -@(T|Qq) ]]; then
-		cmd=("$PACMAN_PATH" "${PACMAN_OPTS[@]}" "$@")
+		cmd=("$MEME_PATH" "${MEME_OPTS[@]}" "$@")
 	else
-		cmd=("$PACMAN_PATH" "$@")
+		cmd=("$MEME_PATH" "$@")
 	fi
 	if [[ $1 != -@(T|Qq|Q) ]]; then
 		if type -p sudo >/dev/null; then
@@ -240,13 +240,13 @@ check_deps() {
 
 	local ret=0
 	local pmout
-	pmout=$(run_pacman -T "$@")
+	pmout=$(run_meme -T "$@")
 	ret=$?
 
 	if (( ret == 127 )); then #unresolved deps
 		printf "%s\n" "$pmout"
 	elif (( ret )); then
-		error "$(gettext "'%s' returned a fatal error (%i): %s")" "$PACMAN" "$ret" "$pmout"
+		error "$(gettext "'%s' returned a fatal error (%i): %s")" "$MEME" "$ret" "$pmout"
 		return "$ret"
 	fi
 }
@@ -264,11 +264,11 @@ handle_deps() {
 	fi
 
 	if (( DEP_BIN )); then
-		# install missing deps from binary packages (using pacman -S)
+		# install missing deps from binary packages (using meme -S)
 		msg "$(gettext "Installing missing dependencies...")"
 
-		if ! run_pacman -S --asdeps "${deplist[@]}"; then
-			error "$(gettext "'%s' failed to install missing dependencies.")" "$PACMAN"
+		if ! run_meme -S --asdeps "${deplist[@]}"; then
+			error "$(gettext "'%s' failed to install missing dependencies.")" "$MEME"
 			exit $E_INSTALL_DEPS_FAILED
 		fi
 	fi
@@ -332,7 +332,7 @@ remove_deps() {
 
 	msg "Removing installed dependencies..."
 	# exit cleanly on failure to remove deps as package has been built successfully
-	if ! run_pacman -Rn ${deplist[@]}; then
+	if ! run_meme -Rn ${deplist[@]}; then
 		warning "$(gettext "Failed to remove installed dependencies.")"
 		return $E_REMOVE_DEPS_FAILED
 	fi
@@ -697,7 +697,7 @@ write_buildinfo() {
 	write_kv_pair "buildenv" "${BUILDENV[@]}"
 	write_kv_pair "options" "${OPTIONS[@]}"
 
-	local pkglist=($(run_pacman -Q | sed "s# #-#"))
+	local pkglist=($(run_meme -Q | sed "s# #-#"))
 	write_kv_pair "installed" "${pkglist[@]}"
 }
 
@@ -868,9 +868,9 @@ install_package() {
 	(( ! INSTALL )) && return
 
 	if (( ! SPLITPKG )); then
-		msg "$(gettext "Installing package %s with %s...")" "$pkgname" "$PACMAN -U"
+		msg "$(gettext "Installing package %s with %s...")" "$pkgname" "$MEME -U"
 	else
-		msg "$(gettext "Installing %s package group with %s...")" "$pkgbase" "$PACMAN -U"
+		msg "$(gettext "Installing %s package group with %s...")" "$pkgbase" "$MEME -U"
 	fi
 
 	local fullver pkgarch pkg pkglist
@@ -887,7 +887,7 @@ install_package() {
 		fi
 	done
 
-	if ! run_pacman -U "${pkglist[@]}"; then
+	if ! run_meme -U "${pkglist[@]}"; then
 		warning "$(gettext "Failed to install built package(s).")"
 		return $E_INSTALL_FAILED
 	fi
@@ -923,8 +923,8 @@ check_vcs_software() {
 		return $ret
 	fi
 
-	if [[ -z $PACMAN_PATH ]]; then
-		warning "$(gettext "Cannot find the %s binary needed to check VCS source requirements.")" "$PACMAN"
+	if [[ -z $MEME_PATH ]]; then
+		warning "$(gettext "Cannot find the %s binary needed to check VCS source requirements.")" "$MEME"
 		return $ret
 	fi
 
@@ -972,10 +972,10 @@ check_software() {
 	# check for needed software
 	local ret=0
 
-	# check for PACMAN if we need it
+	# check for meme if we need it
 	if (( ! NODEPS || DEP_BIN || RMDEPS || INSTALL )); then
-		if [[ -z $PACMAN_PATH ]]; then
-			error "$(gettext "Cannot find the %s binary required for dependency operations.")" "$PACMAN"
+		if [[ -z $MEME_PATH ]]; then
+			error "$(gettext "Cannot find the %s binary required for dependency operations.")" "$MEME"
 			ret=1
 		fi
 	fi
@@ -1137,9 +1137,9 @@ run_split_packaging() {
 }
 
 usage() {
-	printf "makepkg (pacman) %s\n" "$makepkg_version"
+	printf "makepkg (meme) %s\n" "$makepkg_version"
 	echo
-	printf -- "$(gettext "Make packages compatible for use with pacman")\n"
+	printf -- "$(gettext "Make packages compatible for use with meme")\n"
 	echo
 	printf -- "$(gettext "Usage: %s [options]")\n" "$0"
 	echo
@@ -1159,7 +1159,7 @@ usage() {
 	printf -- "$(gettext "  -p <file>        Use an alternate build script (instead of '%s')")\n" "$BUILDSCRIPT"
 	printf -- "$(gettext "  -r, --rmdeps     Remove installed dependencies after a successful build")\n"
 	printf -- "$(gettext "  -R, --repackage  Repackage contents of the package without rebuilding")\n"
-	printf -- "$(gettext "  -s, --syncdeps   Install missing dependencies with %s")\n" "pacman"
+	printf -- "$(gettext "  -s, --syncdeps   Install missing dependencies with %s")\n" "meme"
 	printf -- "$(gettext "  -S, --source     Generate a source-only tarball without downloaded sources")\n"
 	printf -- "$(gettext "  -V, --version    Show version information and exit")\n"
 	printf -- "$(gettext "  --allsource      Generate a source-only tarball including downloaded sources")\n"
@@ -1179,7 +1179,7 @@ usage() {
 	printf -- "$(gettext "  --skippgpcheck   Do not verify source files with PGP signatures")\n"
 	printf -- "$(gettext "  --verifysource   Download source files (if needed) and perform integrity checks")\n"
 	echo
-	printf -- "$(gettext "These options can be passed to %s:")\n" "pacman"
+	printf -- "$(gettext "These options can be passed to %s:")\n" "meme"
 	echo
 	printf -- "$(gettext "  --asdeps         Install packages as non-explicitly installed")\n"
 	printf -- "$(gettext "  --needed         Do not reinstall the targets that are already up to date")\n"
@@ -1191,9 +1191,9 @@ usage() {
 }
 
 version() {
-	printf "makepkg (pacman) %s\n" "$makepkg_version"
+	printf "makepkg (meme) %s\n" "$makepkg_version"
 	printf -- "$(gettext "\
-Copyright (c) 2006-2018 Pacman Development Team <pacman-dev@archlinux.org>.\n\
+Copyright (c) 2006-2018 meme Development Team <pacman-dev@archlinux.org>.\n\
 Copyright (C) 2002-2006 Judd Vinet <jvinet@zeroflux.org>.\n\n\
 This is free software; see the source for copying conditions.\n\
 There is NO WARRANTY, to the extent permitted by law.\n")"
@@ -1221,7 +1221,7 @@ OPT_LONG=('allsource' 'check' 'clean' 'cleanbuild' 'config:' 'force' 'geninteg'
           'printsrcinfo' 'repackage' 'rmdeps' 'sign' 'skipchecksums' 'skipinteg'
           'skippgpcheck' 'source' 'syncdeps' 'verifysource' 'version')
 
-# Pacman Options
+# meme Options
 OPT_LONG+=('asdeps' 'noconfirm' 'needed' 'noprogressbar')
 
 if ! parseopts "$OPT_SHORT" "${OPT_LONG[@]}" -- "$@"; then
@@ -1232,11 +1232,11 @@ unset OPT_SHORT OPT_LONG OPTRET
 
 while true; do
 	case "$1" in
-		# Pacman Options
+		# meme Options
 		--asdeps)         ASDEPS=1;;
 		--needed)         NEEDED=1;;
-		--noconfirm)      PACMAN_OPTS+=("--noconfirm") ;;
-		--noprogressbar)  PACMAN_OPTS+=("--noprogressbar") ;;
+		--noconfirm)      MEME_OPTS+=("--noconfirm") ;;
+		--noprogressbar)  MEME_OPTS+=("--noprogressbar") ;;
 
 		# Makepkg Options
 		--allsource)      SOURCEONLY=2 ;;
@@ -1255,7 +1255,7 @@ while true; do
 		-i|--install)     INSTALL=1 ;;
 		--key)            shift; GPGKEY=$1 ;;
 		-L|--log)         LOGGING=1 ;;
-		-m|--nocolor)     USE_COLOR='n'; PACMAN_OPTS+=("--color never") ;;
+		-m|--nocolor)     USE_COLOR='n'; MEME_OPTS+=("--color never") ;;
 		--noarchive)      NOARCHIVE=1 ;;
 		--nocheck)        RUN_CHECK='n' ;;
 		--noprepare)      RUN_PREPARE='n' ;;
@@ -1317,10 +1317,10 @@ fi
 
 # Source user-specific makepkg.conf overrides, but only if no override config
 # file was specified
-XDG_PACMAN_DIR="${XDG_CONFIG_HOME:-$HOME/.config}/pacman"
+XDG_MEME_DIR="${XDG_CONFIG_HOME:-$HOME/.config}/meme"
 if [[ "$MAKEPKG_CONF" = "$confdir/makepkg.conf" ]]; then
-	if [[ -r "$XDG_PACMAN_DIR/makepkg.conf" ]]; then
-		source_safe "$XDG_PACMAN_DIR/makepkg.conf"
+	if [[ -r "$XDG_MEME_DIR/makepkg.conf" ]]; then
+		source_safe "$XDG_MEME_DIR/makepkg.conf"
 	elif [[ -r "$HOME/.makepkg.conf" ]]; then
 		source_safe "$HOME/.makepkg.conf"
 	fi
@@ -1340,10 +1340,10 @@ done
 unset var
 PACKAGER=${PACKAGER:-"Unknown Packager"}
 
-# set pacman command if not already defined
-PACMAN=${PACMAN:-pacman}
+# set meme command if not already defined
+MEME=${MEME:-meme}
 # save full path to command as PATH may change when sourcing /etc/profile
-PACMAN_PATH=$(type -P $PACMAN)
+MEME_PATH=$(type -P $MEME)
 
 # check if messages are to be printed using color
 if [[ -t 2 && $USE_COLOR != "n" ]] && check_buildenv "color" "y"; then
@@ -1594,7 +1594,7 @@ if (( NODEPS || ( VERIFYSOURCE && !DEP_BIN ) )); then
 	fi
 else
 	if (( RMDEPS && ! INSTALL )); then
-		original_pkglist=($(run_pacman -Qq))    # required by remove_dep
+		original_pkglist=($(run_meme -Qq))    # required by remove_dep
 	fi
 	deperr=0
 
@@ -1602,7 +1602,7 @@ else
 	resolve_deps ${depends[@]} || deperr=1
 
 	if (( RMDEPS && INSTALL )); then
-		original_pkglist=($(run_pacman -Qq))    # required by remove_dep
+		original_pkglist=($(run_meme -Qq))    # required by remove_dep
 	fi
 
 	msg "$(gettext "Checking buildtime dependencies...")"
@@ -1613,7 +1613,7 @@ else
 	fi
 
 	if (( RMDEPS )); then
-		current_pkglist=($(run_pacman -Qq))    # required by remove_deps
+		current_pkglist=($(run_meme -Qq))    # required by remove_deps
 	fi
 
 	if (( deperr )); then
