--- a/test/scripts/Makefile.am
+++ b/test/scripts/Makefile.am
@@ -1,6 +1,6 @@
 check_SCRIPTS = \
 	parseopts_test.sh \
-	pacman-db-upgrade-v9.py \
+	meme-db-upgrade-v9.py \
 	makepkg-template_test.sh \
 	human_to_size_test.sh
 
