--- a/scripts/makepkg-template.pl.in
+++ b/scripts/makepkg-template.pl.in
@@ -36,8 +36,8 @@ my $template_marker = qr/# template/;
 # runtime loading to avoid dependency on cpan since this is the only non-core module
 my $loaded_gettext = can_load(modules => {'Locale::gettext' => undef});
 if ($loaded_gettext) {
-	Locale::gettext::bindtextdomain("pacman-scripts", '@localedir@');
-	Locale::gettext::textdomain("pacman-scripts");
+	Locale::gettext::bindtextdomain("meme-scripts", '@localedir@');
+	Locale::gettext::textdomain("meme-scripts");
 }
 
 sub gettext {
@@ -189,7 +189,7 @@ sub usage {
 
 sub version {
 	my ($exitstatus) = @_;
-	printf "makepkg-template (pacman) %s\n", '@PACKAGE_VERSION@';
+	printf "makepkg-template (meme) %s\n", '@PACKAGE_VERSION@';
 	print gettext(
 		'Copyright (c) 2013-2018 Pacman Development Team <pacman-dev@archlinux.org>.'."\n".
 		'This is free software; see the source for copying conditions.'."\n".
