--- a/doc/asciidoc.conf
+++ b/doc/asciidoc.conf
@@ -50,14 +50,14 @@ ifdef::backend-docbook[]
 template::[header-declarations]
 <refentry>
 <refentryinfo>
-<date>{pacman_date}</date>
+<date>{meme_date}</date>
 </refentryinfo>
 <refmeta>
 <refentrytitle>{mantitle}</refentrytitle>
 <manvolnum>{manvolnum}</manvolnum>
-<refmiscinfo class="source">Pacman</refmiscinfo>
-<refmiscinfo class="version">{pacman_version}</refmiscinfo>
-<refmiscinfo class="manual">Pacman Manual</refmiscinfo>
+<refmiscinfo class="source">Meme</refmiscinfo>
+<refmiscinfo class="version">{meme_version}</refmiscinfo>
+<refmiscinfo class="manual">Meme Manual</refmiscinfo>
 </refmeta>
 <refnamediv>
   <refname>{manname}</refname>
