--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -10,6 +10,7 @@ SED_PROCESS = \
 	-e 's|@sysconfdir[@]|$(sysconfdir)|g' \
 	-e 's|@localstatedir[@]|$(localstatedir)|g' \
 	-e 's|@prefix[@]|$(prefix)|g' \
+    -e 's|@userid[@]|$(userid)|g' \
 	-e 's|@PACKAGE_VERSION[@]|$(PACKAGE_VERSION)|g' \
 	-e 's|@PACKAGE_NAME[@]|$(PACKAGE_NAME)|g' \
 	-e 's|@PKGEXT[@]|$(PKGEXT)|g' \
