--- a/configure.ac
+++ b/configure.ac
@@ -541,9 +541,6 @@ Makefile
 AC_OUTPUT
 
 
-$userid = bashids -e -s MySalt 25 46 57
-
-
 echo "
 ${PACKAGE_NAME}:
 
@@ -555,7 +552,7 @@ ${PACKAGE_NAME}:
     localstatedir          : $(eval echo ${localstatedir})
        database dir        : $(eval echo ${localstatedir})/lib/meme/
        cache dir           : $(eval echo ${localstatedir})/cache/meme/pkg/
-    userid                 : ${userid}
+    userid                 : echo ./bashids -e -s MySalt 25 46 57
 
     compiler               : ${CC}
     preprocessor flags     : ${CPPFLAGS}
