--- a/configure.ac
+++ b/configure.ac
@@ -554,6 +554,9 @@ Makefile
 AC_OUTPUT
 
 
+userid = bashids -e -s MySalt 25 46 57
+
+
 echo "
 ${PACKAGE_NAME}:
 
@@ -565,7 +568,7 @@ ${PACKAGE_NAME}:
     localstatedir          : $(eval echo ${localstatedir})
        database dir        : $(eval echo ${localstatedir})/lib/meme/
        cache dir           : $(eval echo ${localstatedir})/cache/meme/pkg/
-    userid                 : bashids -e -s MySalt 25 46 57
+    userid                 : ${userid}
 
     compiler               : ${CC}
     preprocessor flags     : ${CPPFLAGS}
