install.sh added.

--- a/etc/meme.conf.in
+++ b/etc/meme.conf.in
@@ -31,52 +31,18 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+# Memes do need color!
+Color
 #TotalDownload
 CheckSpace
 #VerbosePkgLists
 
 # PGP signature checking
-#SigLevel = Optional
-#LocalFileSigLevel = Optional
-#RemoteFileSigLevel = Optional
+# SigLevel = Optional
+# LocalFileSigLevel = Optional
+# RemoteFileSigLevel = Optional
 
 [meme]
 # SigLevel = Optional TrustAll
 # SigLevel = Never
 Server = https://mememgmt.tk/repo/
-
-#
-# REPOSITORIES
-#   - can be defined here or included from another file
-#   - meme will search repositories in the order defined here
-#   - local/custom mirrors can be added here or in separate files
-#   - repositories listed first will take precedence when packages
-#     have identical names, regardless of version number
-#   - URLs will have $repo replaced by the name of the current repo
-#   - URLs will have $arch replaced by the name of the architecture
-#
-# Repository entries are of the format:
-#       [repo-name]
-#       Server = ServerName
-#       Include = IncludePath
-#
-# The header [repo-name] is crucial - it must be present and
-# uncommented to enable the repo.
-#
-
-# An example of a disabled remote package repository with multiple servers
-# available. To enable, uncomment the following lines. You can add preferred
-# servers immediately after the header and they will be used before the
-# default mirrors.
-#[core]
-#SigLevel = Required
-#Server = ftp://ftp.example.com/foobar/$repo/os/$arch/
-# The file referenced here should contain a list of 'Server = ' lines.
-#Include = @sysconfdir@/meme.d/mirrorlist
-
-# An example of a custom package repository.  See the meme manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
