change DB path.

--- a/etc/meme.conf.in
+++ b/etc/meme.conf.in
@@ -10,7 +10,7 @@
 # The following paths are commented out with their default values listed.
 # If you wish to use different paths, uncomment and update the paths.
 #RootDir     = @ROOTDIR@
-#DBPath      = @localstatedir@/lib/meme/
+#DBPath      = @localstatedir@/lib/
 #CacheDir    = @localstatedir@/cache/meme/pkg/
 #LogFile     = @localstatedir@/log/meme.log
 #GPGDir      = @sysconfdir@/meme.d/gnupg/
