--- a/etc/meme.conf.in
+++ b/etc/meme.conf.in
@@ -9,12 +9,12 @@
 [options]
 # The following paths are commented out with their default values listed.
 # If you wish to use different paths, uncomment and update the paths.
-#RootDir     = @ROOTDIR@
-#DBPath      = @localstatedir@/lib/
-#CacheDir    = @localstatedir@/cache/meme/pkg/
-#LogFile     = @localstatedir@/log/meme.log
-#GPGDir      = @sysconfdir@/meme.d/gnupg/
-#HookDir     = @sysconfdir@/meme.d/hooks/
+RootDir     = @ROOTDIR@
+DBPath      = @localstatedir@/var/lib/
+CacheDir    = @localstatedir@/cache/meme/pkg/
+LogFile     = @localstatedir@/log/meme.log
+GPGDir      = @sysconfdir@/meme.d/gnupg/
+HookDir     = @sysconfdir@/meme.d/hooks/
 HoldPkg     = meme glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
